# viet_care_assistant

./: .env  .env.example  .gitignore  Dockerfile  README.markdown  README.md  directory.txt  docker-compose.yml  main.py  pyproject.toml  readme.md  test_connect_db.py
.github/workflows/: ci.yml
app/: app_main.py  config.py  database.py  db_bootstrap.py
app/core/: __init__.py  exceptions.py  logging.py
app/frontend/: app.py
app/frontend/pages/: ChatPage.py  LoginPage.py
app/models/: __init__.py  conversation.py  knowledge_base.py  message.py  user.py
app/router/: auth.py  chat.py  health.py  kb_collection.py  kb_faq.py
app/schemas/: conversation.py  kb_collection.py  kb_faq.py  message.py  user.py
app/services/: auth.py  chat_service.py  llm.py  upload_faq.py
data/: Mental_Health_FAQ.json  Mental_health.json  data_processing.py  feed_data.py  test_collection.json
test/: test_auth.py  test_auth_router.py  test_fts.py  test_kb.py  test_llm.py
tests/: conftest.py  test_auth.py  test_health.py
